# LDA-QDA-FinalProject-CS115-UIT

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: precommit.yml
assets/Banner/: banner.txt
jupyter_notebook/: LDA_QDA.ipynb
src/LDA/: LDA.py  __init__.py
src/LDA/LDA_Classifications/: LDA_Classifications_Datasets.py  __init__.py
src/LDA/LDA_DimesionalReduction/: LDA_with_Datasets.py  __init__.py
src/LDA_Classification/: LDA.py  LDA_with_Datasets.py  Step_by_Step.py
src/LDA_DimesionalReduction/: LDA_with_Datasets.py  __init__.py
src/QDA_Classification/: QDA.py  __init__.py
